lesson32/progressive-delivery-system/k8s/istio/security.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: progressive-delivery
spec:
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-internal
  namespace: progressive-delivery
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: ["progressive-delivery", "istio-system"]
